@@ -1,1 +1,1 @@
-MARKETING_VERSION = 7.126.0
+MARKETING_VERSION = 7.127.0
