@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>DefaultValue</key>
-			<string>7.126.0</string>
+			<string>7.127.0</string>
 			<key>Key</key>
 			<string>version</string>
 			<key>Title</key>
